:bug: fix overflow on main page

--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,10 @@ body {
 .information {
   flex: 1;
   background: rgb(233, 233, 233);
+  max-height: 100%;
+  overflow: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .nav {
